--- a/css/main.css
+++ b/css/main.css
@@ -473,6 +473,16 @@ section#hero {
   margin-bottom: 1rem;
   /* Hide on mobile */
 }
+@media (width >= 768px) {
+  .features-container {
+    margin-bottom: 7rem;
+  }
+}
+@media (width >= 1400px) {
+  .features-container {
+    margin-bottom: 14rem;
+  }
+}
 .features-container h2, .features-container h3 {
   font-weight: var(--fw-extra);
 }
@@ -486,18 +496,65 @@ section#hero {
 .features-container .brandlogo-container .desktop-only {
   display: none;
 }
+@media (width >= 1400px) {
+  .features-container .brandlogo-container .desktop-only {
+    display: flex;
+  }
+}
+@media (width >= 768px) {
+  .features-container .brandlogo-container {
+    display: flex;
+  }
+}
+@media (width >= 1400px) {
+  .features-container .brandlogo-container {
+    margin-top: 6rem;
+  }
+}
 .features-container .headline, .features-container .paragraph {
   text-align: center;
+}
+@media (width >= 1400px) {
+  .features-container .headline, .features-container .paragraph {
+    text-align: left;
+  }
 }
 .features-container .headline {
   margin-top: 2.5rem;
   font-size: var(--fs-h3);
   line-height: 1.3;
 }
+@media (width >= 768px) {
+  .features-container .headline {
+    margin-top: 4rem;
+    font-size: var(--fs-h2);
+    line-height: 1.3;
+  }
+}
+@media (width >= 1400px) {
+  .features-container .headline {
+    margin-top: 0;
+    font-size: var(--fs-h1);
+    line-height: 1.3;
+  }
+}
+@media (width >= 1400px) {
+  .features-container .content-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-top: 7rem;
+    gap: 8rem;
+  }
+}
 .features-container .paragraph {
   margin-top: 1.5rem;
   font-size: var(--fs-body-l);
   line-height: 1.6;
+}
+@media (width >= 1400px) {
+  .features-container .paragraph {
+    margin-top: 0.75rem;
+  }
 }
 .features-container .left-content {
   display: none;
@@ -505,12 +562,50 @@ section#hero {
   ** to prevent overflow due to position: absolute */
   height: 683px;
 }
+@media (width >= 1400px) {
+  .features-container .left-content {
+    display: block;
+    position: relative;
+  }
+  .features-container .left-content .phone-img {
+    position: absolute;
+  }
+  .features-container .left-content .card-img {
+    position: absolute;
+    top: 90px;
+    left: 25px;
+  }
+}
 .features-container .right-content {
   display: grid;
   grid-template-columns: 1fr;
 }
+@media (width >= 1400px) {
+  .features-container .right-content {
+    grid-template-rows: min-content min-content auto;
+  }
+}
 .features-container .feature-cards {
   margin-top: 2rem;
+}
+@media (width >= 768px) {
+  .features-container .feature-cards .card {
+    margin-bottom: 0;
+  }
+}
+@media (width >= 768px) {
+  .features-container .feature-cards {
+    margin-top: 2.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2.5rem 2rem;
+  }
+}
+@media (width >= 1400px) {
+  .features-container .feature-cards {
+    gap: 3rem;
+    margin-top: 4.5rem;
+  }
 }
 
 section#how {
@@ -1401,27 +1496,6 @@ a:hover {
   }
 }
 @media (768px <= width) {
-  /* Features section */
-  .features-container {
-    margin-bottom: 7rem;
-  }
-  .features-container .brandlogo-container {
-    display: flex;
-  }
-  .features-container .headline {
-    margin-top: 4rem;
-    font-size: var(--fs-h2);
-    line-height: 1.3;
-  }
-  .features-container .feature-cards {
-    margin-top: 2.5rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2.5rem 2rem;
-  }
-  .features-container .feature-cards .card {
-    margin-bottom: 0;
-  }
   /* How does it work-section */
   .how-container h2 {
     font-size: 2.125rem;
@@ -1522,56 +1596,6 @@ a:hover {
   }
 }
 @media (1400px <= width) {
-  /* Features section */
-  .features-container {
-    margin-bottom: 14rem;
-  }
-  .features-container .content-container {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    margin-top: 7rem;
-    gap: 8rem;
-  }
-  .features-container .content-container .headline {
-    margin-top: 0;
-  }
-  .features-container .content-container .feature-cards {
-    gap: 3rem;
-  }
-  .features-container .brandlogo-container {
-    margin-top: 6rem;
-  }
-  .features-container .brandlogo-container .desktop-only {
-    display: flex;
-  }
-  .features-container .left-content {
-    display: block;
-    position: relative;
-  }
-  .features-container .left-content .phone-img {
-    position: absolute;
-  }
-  .features-container .left-content .card-img {
-    position: absolute;
-    top: 90px;
-    left: 25px;
-  }
-  .features-container .right-content {
-    grid-template-rows: min-content min-content auto;
-  }
-  .features-container .right-content .headline, .features-container .right-content .paragraph {
-    text-align: left;
-  }
-  .features-container .right-content .headline {
-    font-size: var(--fs-h1);
-    line-height: 1.3;
-  }
-  .features-container .right-content .paragraph {
-    margin-top: 0.75rem;
-  }
-  .features-container .right-content .feature-cards {
-    margin-top: 4.5rem;
-  }
   /* How does it work-section */
   .how-container h2 {
     margin-top: 5rem;
