--- a/css/scss/sections/_features.scss
+++ b/css/scss/sections/_features.scss
@@ -1,7 +1,16 @@
+@use '../abstracts/' as *;
+
 .features-container {
   display: grid;
   grid-template-columns: 1fr;
   margin-bottom: 1rem;
+
+  @include tablet {
+    margin-bottom: 7rem;
+  }
+  @include desktop {
+    margin-bottom: 14rem;
+  }
 
   h2, h3 {
     font-weight: var(--fw-extra);
@@ -16,23 +25,61 @@
 
     .desktop-only {
       display: none;
+      @include desktop {
+        display: flex;
+      }
+    }
+
+    @include tablet {
+      display: flex;
+    }
+    @include desktop {
+      margin-top: 6rem;
     }
   }
 
   .headline, .paragraph {
     text-align: center;
+
+    @include desktop {
+      text-align: left;
+    }
   }
 
   .headline {
     margin-top: 2.5rem;
     font-size: var(--fs-h3);
     line-height: 1.3;
+
+    @include tablet {
+      margin-top: 4rem;
+      font-size: var(--fs-h2);
+      line-height: 1.3;
+    }
+    @include desktop {
+      margin-top: 0;
+      font-size: var(--fs-h1);
+      line-height: 1.3;
+    }
+  }
+
+  .content-container {
+    @include desktop {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      margin-top: 7rem;
+      gap: 8rem;
+    }
   }
 
   .paragraph {
     margin-top: 1.5rem;
     font-size: var(--fs-body-l);
     line-height: 1.6;
+
+    @include desktop {
+      margin-top: .75rem;
+    }
   }
 
   /* Hide on mobile */
@@ -41,14 +88,49 @@
     /* Set height equal to height of image,
     ** to prevent overflow due to position: absolute */
     height: 683px;
+
+    @include desktop {
+      display: block;
+      position: relative;
+
+      .phone-img {
+        position: absolute;
+      }
+      .card-img {
+        position: absolute;
+        top: 90px;
+        left: 25px;
+      }
+    }
   }
 
   .right-content {
     display: grid;
     grid-template-columns: 1fr;
+
+    @include desktop {
+      grid-template-rows: min-content min-content auto;
+    }
   }
 
   .feature-cards {
     margin-top: 2rem;
+
+    .card {
+      @include tablet {
+        margin-bottom: 0;
+      }
+    }
+
+    @include tablet {
+      margin-top: 2.5rem;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 2.5rem 2rem;
+    }
+    @include desktop {
+      gap: 3rem;
+      margin-top: 4.5rem;
+    }
   }
 }
