--- a/css/scss/base/_media-width.scss
+++ b/css/scss/base/_media-width.scss
@@ -366,15 +366,15 @@
   //   }
   // }
 
-  /* Payment section */
-  section#payment {
-    display: block;
-  }
+  // /* Payment section */
+  // section#payment {
+  //   display: block;
+  // }
 
-  /* Reviews section */
-  section#reviews {
-    display: block;
-  }
+  // /* Reviews section */
+  // section#reviews {
+  //   display: block;
+  // }
 
   /* FAQ-contact section */
   .faq-contact-container {
