--- a/css/scss/sections/_payment.scss
+++ b/css/scss/sections/_payment.scss
@@ -1,5 +1,11 @@
+@use '../abstracts/' as *;
+
 section#payment {
   display: none;
+
+  @include desktop {
+    display: block;
+  }
 }
 
 .payment-container {
