SCSS: Move faqcontact and footer media queries into their respective section files. Delete unused media query file.

--- a/css/scss/components/_buttons.scss
+++ b/css/scss/components/_buttons.scss
@@ -41,6 +41,10 @@
   font-weight: var(--fw-semi);
   line-height: 1.6;
   padding: 1em 2em;
+
+  @include tablet {
+    display: none;
+  }
 }
 
 .btn-dl {
