--- a/css/scss/components/_subscribe.scss
+++ b/css/scss/components/_subscribe.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/' as *;
+
 .subscribe {
   margin-top: 2.5rem;
   padding: 3rem 1rem 0;
@@ -7,20 +9,55 @@
   display: flex;
   flex-direction: column;
 
+  @include tablet {
+    margin-top: 2rem;
+    padding: 3rem 1rem;
+    flex-direction: row;
+  }
+  @include desktop {
+    grid-area: subscribe;
+    margin-top: 6rem;
+    padding: 4rem 6rem;
+  }
+
   .cta {
     display: flex;
     align-items: center;
+
+    @include tablet {
+      flex-basis: 50%;
+      justify-content: center;
+      margin-right: 3rem;
+    }
 
     h2 {
       font-size: 1.375rem;
       line-height: 1.35;
       &.desktop-text {
         display: none;
+
+        @include desktop {
+          display: block;
+        }
+      }
+
+      @include desktop {
+        display: none;
       }
     }
     
     img {
       margin-right: 1rem;
+
+      @include tablet {
+        margin-right: 2rem;
+      }
+    }
+  }
+
+  .email-form {
+    @include tablet {
+      flex-basis: 50%;
     }
   }
 
