--- a/css/scss/sections/_faqcontact.scss
+++ b/css/scss/sections/_faqcontact.scss
@@ -1,16 +1,56 @@
+@use '../abstracts/' as *;
+
 .faq-contact-container {
   display: grid;
   grid-template-columns: 1fr;
 
+  @include desktop {
+    margin-top: 7rem;
+    display: grid;
+    grid-template-columns: 0.6fr 1fr;
+    grid-template-rows: auto 1fr;
+    column-gap: 8rem;
+    grid-template-areas:  "header faq-accordion"
+                          "contact faq-accordion"
+                          "subscribe subscribe";
+    align-items: start;
+  } 
+
   .header {
+    @include tablet {
+      justify-self: center;
+      width: 60%;
+    }
+    @include desktop {
+      grid-area: header;
+      justify-self: left;
+      width: 100%;
+    }
+
     h2 {
       margin-top: 3rem;
       font-size: var(--fs-h4);
       font-weight: var(--fw-extra);
+
+      @include tablet {
+        font-size: var(--fs-h2);
+        line-height: 1.3;
+      }
+      @include desktop {
+        text-align: left;
+      }
     }
+
     p {
       /* Poor contrast, but according to design */
       color: var(--color-gray-700);
+
+      @include tablet {
+        margin-top: 2rem;
+      }
+      @include desktop {
+        text-align: left;
+      }
     }
   }
 
@@ -18,6 +58,34 @@
     margin-top: 1rem;
     font-size: var(--fs-body-l);
     line-height: 1.6;
+
+    @include desktop {
+      margin-top: 2rem;
+    }
+  }
+
+  .faq-accordion {
+    @include tablet {
+      /* Start by removing FAQ borders */
+      --_faq-border: unset;
+      
+      details {
+        box-shadow: 0px 2px 5px var(--color-faqoutline);
+        border-radius: 8px;
+
+        p:first-child {
+          margin-top: 0;
+        }
+
+        /* Apply margin-top to all details-elements except first one */
+        &:not(:first-child) {
+          margin-top: 1rem;
+        }
+      }
+    }
+    @include desktop {
+      grid-area: faq-accordion;
+    }
   }
 
   .faq-accordion p {
@@ -29,6 +97,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @include tablet {
+      margin-top: 2rem;
+    }
+    @include desktop {
+      grid-area: contact;
+      margin-top: 3rem;
+    }
   }
 
   .contact-cards {
@@ -38,6 +114,10 @@
     .chat-card, .phone-card {
       /* Make cards take up equal width */
       flex-basis: 100%;
+    }
+
+    @include tablet {
+      display: flex;
     }
   }
 
@@ -50,6 +130,12 @@
       font-size: var(--fs-body-s);
       line-height: 1.6;
       font-weight: var(--fw-semi);
+    }
+  }
+
+  .btn-contanct {
+    @include tablet {
+      display: none;
     }
   }
 
