--- a/css/scss/base/_typography.scss
+++ b/css/scss/base/_typography.scss
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @use '../abstracts/' as *;
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
